Fix/checkbox visibilty on prod (#260)
## Describe your changes

## Issue ticket number and link

## Checklist before requesting a review
- [ ] I have read and understand the [Contributions
section](https://github.com/tprouvot/Salesforce-Inspector-reloaded#contributions)
- [ ] Target branch is releaseCandidate and not master
- [ ] I have performed a self-review of my code
- [ ] I ran the [unit
tests](https://github.com/tprouvot/Salesforce-Inspector-reloaded#unit-tests)
and my PR does not break any tests
- [ ] I documented the changes I've made on the
[CHANGES.md](https://github.com/tprouvot/Salesforce-Inspector-reloaded/blob/master/CHANGES.md)
and followed actual conventions
- [ ] I added a new section on
[how-to.md](https://github.com/tprouvot/Salesforce-Inspector-reloaded/blob/master/docs/how-to.md)
(optional)

---------

--- a/addon/button.css
+++ b/addon/button.css
@@ -106,25 +106,25 @@
     position: fixed;
     top: 10px;
     right: 78px;
-    z-index: 100;
+    z-index: 10000;
 }
 .checkboxScrollProd{
     position: fixed;
     top: 21px; 
     right: 78px;
-    z-index: 100;
+    z-index: 10000;
 }
 .labelCheckboxScrollSandbox{
     position: fixed;
     top: 7px; 
     right: 100px; 
     color: white;
-    z-index: 100;
+    z-index: 10000;
 }
 .labeCheckboxScrollProd{
     position: fixed;
     top: 15px;
     right: 100px;
     color: white;
-    z-index: 100;
+    z-index: 10000;
 }
